Fri Aug  6 08:39:38 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * protocols/ace/TMCast/TMCast.mpc:
          Removed exceptions as base project

Thu Aug  5 16:56:01 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/tmcast.mpb:
        * protocols/tests/RMCast/RMCast.mpc:
          Removed exceptions as base project

Thu Aug  5 09:00:49 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ACE.cpp:
        * ace/ACE_crc32.cpp:
        * ace/ACE_crc_ccitt.cpp:
        * ace/ARGV.cpp:
        * ace/ATM_Acceptor.cpp:
        * ace/ATM_Addr.cpp:
        * ace/ATM_Connector.cpp:
        * ace/ATM_Params.cpp:
        * ace/ATM_QoS.cpp:
        * ace/ATM_Stream.cpp:
        * ace/Acceptor.cpp:
        * ace/Activation_Queue.cpp:
        * ace/Active_Map_Manager.cpp:
        * ace/Addr.cpp:
        * ace/Arg_Shifter.cpp:
        * ace/Argv_Type_Converter.cpp:
        * ace/Assert.cpp:
        * ace/Asynch_Acceptor.cpp:
        * ace/Asynch_IO.cpp:
        * ace/Asynch_Pseudo_Task.cpp:
        * ace/Atomic_Op.cpp:
        * ace/Atomic_Op_GCC_T.cpp:
        * ace/Atomic_Op_T.cpp:
        * ace/Auto_Ptr.cpp:
        * ace/Barrier.cpp:
        * ace/Base_Thread_Adapter.cpp:
        * ace/Basic_Stats.cpp:
        * ace/CDR_Base.cpp:
        * ace/Capabilities.cpp:
        * ace/Codeset_IBM1047.cpp:
        * ace/Codeset_Registry.cpp:
        * ace/Condition_Thread_Mutex.cpp:
        * ace/Connection_Recycling_Strategy.cpp:
        * ace/Containers.cpp:
        * ace/Copy_Disabled.cpp:
        * ace/Countdown_Time.cpp:
        * ace/DEV.cpp:
        * ace/DEV_Connector.cpp:
        * ace/DEV_IO.cpp:
        * ace/DLL.cpp:
        * ace/DLL_Manager.cpp:
        * ace/Date_Time.cpp:
        * ace/Dev_Poll_Reactor.cpp:
        * ace/Dirent_Selector.cpp:
        * ace/Dump.cpp:
        * ace/Dynamic.cpp:
        * ace/Dynamic_Message_Strategy.cpp:
        * ace/Dynamic_Service_Dependency.cpp: